--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "3921618987";
+    var serviceWorkerVersion = "391407805";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <link rel=”icon” href=”favicon.ico”>
 </head>
 <body>
   <script>
